error
 Cell In[4], line 78
    cache_file = os.path.join(embedding_cache_dir, f"bert_emb_{split_hash}.npy")}.npy")
                                                                                ^
SyntaxError: unmatched '}'
